tests/integration/snapshots/integration__completion__completion_for_attribute_on_field.snap
---
source: tests/integration/completion.rs
expression: response
---
[
  "id: 0",
  "deprecated",
  "key",
  "required",
  "force_align"
]
