tests/integration/snapshots/integration__completion__completion_for_enum_variant_attribute_sibling_table.snap
---
source: tests/integration/completion.rs
expression: response
---
[
  "deprecated",
  "key",
  "required",
  "force_align",
  "my_attr"
]
