tests/integration/snapshots/integration__completion__completion_for_field_namespace_partial.snap
---
source: tests/integration/completion.rs
expression: response
---
[
  "long",
  "ulong",
  "one.two.three",
  "Forest",
  "Tree"
]
