tests/integration/snapshots/integration__completion__completion_for_field_namespace_partial_with_dot.snap
---
source: tests/integration/completion.rs
expression: response
---
[
  "one.two.three",
  "Forest",
  "Tree"
]
