tests/integration/snapshots/integration__completion__completion_for_field_type_prefix.snap
---
source: tests/integration/completion.rs
expression: response
---
[
  "ubyte",
  "uint",
  "uint16",
  "uint32",
  "uint64",
  "ulong",
  "ushort",
  "double"
]
