tests/integration/snapshots/integration__completion__completion_for_root_type.snap
---
source: tests/integration/completion.rs
expression: response
---
[
  "AnotherTable",
  "MyTable"
]
