tests/integration/snapshots/integration__completion__completion_for_second_attribute.snap
---
source: tests/integration/completion.rs
expression: response
---
[
  "deprecated",
  "key",
  "required",
  "force_align"
]
