tests/integration/snapshots/integration__completion__completion_for_type_in_field_name.snap
---
source: tests/integration/completion.rs
expression: response
---
[
  "Widget",
  "Abacus",
  "Collection",
  "bool",
  "byte",
  "double",
  "float",
  "float32",
  "float64",
  "int",
  "int16",
  "int32",
  "int64",
  "long",
  "short",
  "string",
  "ubyte",
  "uint",
  "uint16",
  "uint32",
  "uint64",
  "ulong",
  "ushort"
]
