tests/integration/snapshots/integration__completion__completion_from_included_file.snap
---
source: tests/integration/completion.rs
expression: response
---
[
  "IncludedStruct",
  "IncludedTable",
  "int",
  "int16",
  "int32",
  "int64",
  "string",
  "uint",
  "uint16",
  "uint32",
  "uint64"
]
